--- a/Report/SprawozdaniePR.tex
+++ b/Report/SprawozdaniePR.tex
@@ -163,7 +163,7 @@ Konieczne jest również zmieszczenie 4 słów macierzy wynikowej (po jednym dla
 \\
 Ostatecznie rozmiar instancji, dla której będzie zachowana lokalność czasowa dostępu do danych, można policzyć ze wzoru:
 \begin{equation}
-n^2 + 4\cdot n + 4 \cdot 16 < 6 \text{ MB}
+4 \cdot \left( n^2 + 4\cdot n + 4 \cdot 16 \right) < 6 \text{ MB}
 \end{equation}
 
 Uwzględniając pewien zapas daje to instancję o rozmiarze $n=1200$.\\
@@ -173,7 +173,7 @@ W wersji 6 pętlowej algorytmu mnożenia macierzy (TODO odnośnik do listingu IJ
 \\
 Wielkość instancji zapewniającej częściową lokalność czasową można teoretycznie policzyć korzystając ze wzoru (TODO odnośnik do wzoru powyżej), zamiast $n$ podstawiając $r$. Wartość ta będzie poprawna przy założeniu, że rdzenie pracują z równą szybkością i w danych czasie mogą współdzielić ten sam wykorzystywany blok macierzy b. Jest to jednak założenie dość ryzykowne, więc do obliczenia przyjęto inny wzór: 
 \begin{equation}
-12r^2 < 6 \text{ MB}
+4 \cdot \left( 12r^2 \right) < 6 \text{ MB}
 \end{equation}
 
 Taki rozmiar powinien zapewnić, że dla każdego rdzenia możliwe jest przechowywanie w pamięci podręcznej wykorzystywanych przez niego aktualnie fragmentów (bloków r*r) wszystkich trzech macierzy. Daje to instancję testową o parametrach $n=1400$, $r=350$. Instancja ta zostanie również wykorzystana do testu metody 3 pętlowej, gdzie należy oczekiwać braku lokalności czasowej dostępu do danych, ponieważ wymagana pamięć podręczna musiałaby mieć pojemność ok. 7,5 MB.
@@ -207,8 +207,15 @@ Eksperyment zostanie zatem przeprowadzony dla instancji:
 \item n=1400, r=175
 \end{enumerate}
 
-Obie instancje zapewniają równomierne rozłożenie pracy na wątki. Pierwsza instancja nie zapewni lokalnego przestrzennie dostępu do danych, ponieważ rozmiar macierzy będzie powodował takie ułożenie danych na stronach, że przynajmniej niektóre bloki będą wymagały 2r stron (czyli 700), co przy wielokrotnym wykorzystywaniu fragmentu macierzy B będzie skutkowało wielokrotnym zastępowaniem wpisów w TLB i koniecznością ponownego uzupełniania tych informacji. Druga instancja nawet przy pesymistycznym założeniu dotyczącym rozmieszczenia danych na stronach zapewni lokalność przestrzenną (adresy 350 stron dla fragmentu macierzy B oraz pojedynczych stron dla fragmentów macierzy A oraz C zmieszczą się w buforze).
+Obie instancje zapewniają równomierne rozłożenie pracy na wątki. Pierwsza instancja nie zapewni lokalnego przestrzennie dostępu do danych, ponieważ rozmiar macierzy będzie powodował takie ułożenie danych na stronach, że przynajmniej niektóre bloki będą wymagały 2r stron (czyli 700), co przy wielokrotnym wykorzystywaniu fragmentu macierzy B będzie skutkowało wielokrotnym zastępowaniem wpisów w TLB i koniecznością ponownego uzupełniania tych informacji. Druga instancja nawet przy pesymistycznym założeniu dotyczącym rozmieszczenia danych na stronach zapewni lokalność przestrzenną (adresy 350 stron dla fragmentu macierzy B oraz pojedynczych stron dla fragmentów macierzy A oraz C zmieszczą się w buforze).\\
+\\
+Dodatkowo sprawdzona zostanie efektywność przetwarzania dla instancji:
+\begin{enumerate}
+\item n=2800, r=350
+\item n=2800, r=700
+\end{enumerate}
 
+Pierwsza może charakteryzować się zbliżoną lokalnością czasową do instancji $n=1400$, $r=350$, choć w tym przypadku dane mogą być pobierane ośmiokrotnie ($n/r = 8$). W przypadku drugiej instancji lokalność czasowa wciąż może być zachowana. Chociaż nie jest spełniony warunek ze wzoru (TODO odnośnik), to przy optymistycznym założeniu, że rdzenie pracują z podobną prędkością, fragment macierzy B może być współdzielony, z macierzy A wystarczy teoretycznie zmieścić w pamięci podręcznej jeden wierz bloku r*r, a z macierzy wynikowej jedną linię zawierającą aktualnie obliczaną komórkę macierzy. Z drugiej strony, należy spodziewać się znaczącego wzrostu wskaźnika braków trafień do TLB, ponieważ, niezależnie od sposobu ułożenia danych na stronach, adresy stron zawierających fragment r*r macierzy B nie zmieszczą się w buforze TLB, co będzie powodować konieczność przeglądania tablicy stron przy każdym dostępie do danych tej macierzy, wewnątrz najbardziej wewnętrznej pętli.
 
 \section{Eksperyment pomiarowy}
 
@@ -218,13 +225,27 @@ TODO tabelka n,r, wybrane instancje, oba kody
 
 \subsection{Mierzone parametry}
 
+W trakcie eksperymentu zmierzono czas przetwarzania danej instancji odpowiednią metodą oraz czas przetwarzania tej samej instancji sekwencyjną metodą IKJ, w celu wyznaczenia wartości parametru przyspieszenia przetwarzania równoległego.\\
+\\
+W celu obliczenia przedstawionych dalej miar efektywności dokonano pomiaru następujących zdarzeń w narzędziu do analizy wydajności AMD CodeXL:
+
+\begin{itemize}
+\item \textbf{CPU clocks not halted},
+\item \textbf{Retired instructions},
+\item \textbf{Data cache accesses},
+\item \textbf{L1 DTLB and L2 DTLB miss},
+\item \textbf{L3 miss}.
+\end{itemize}
+
+Każdy kod został uruchomiony dwukrotnie, ponieważ jednocześnie, z odpowiednią dokładnością, można mierzyć tylko 4 zdarzenia. Progi zliczania zostały zapisane w załączonym pliku, zwykle były to wartości domyślne, jednak w niektórych przypadkach, przy bardzo małej wartości wartości progów zostały zmniejszone.
+
 \subsection{Wyniki eksperymentu}
 
 todo, odwołanie do tabeli, podpisać je w arkuszu i tu używać tych oznaczeń
 
 \subsection{Wzory}
 
-todo
+{\huge TODO przedziały wartości}
 
 Prędkość przetwarzania
 \begin{equation}
@@ -291,9 +312,30 @@ przygotować szblony wykresów, na razie nie  wiem dla których dokładnie danyc
 
 
 \section{Wnioski}
+{\huge TODO uwaga zmiana wzoru na wskaźniki TLB-miss-rate}\\
+
+\subsection{Metoda 3 pętlowa}
+
+Wielkości instancji charakterystycznych obliczone w czasie analizy warunków lokalności czasowej i przestrzennej dostępu do danych, zgodnie z oczekiwaniami cechują się różną prędkością przetwarzania. Największą wartość uzyskano dla instancji $n=700$, która cechuje się dwoma rodzajami lokalności  dostępu do danych. W przypadku instancji $n=1200$, dla której miała być zachowana tylko lokalność czasowa, prędkość przetwarzania jest zauważalnie niższa. Instancja $n=1400$ cechuje sie brakiem lokalności dostępu do danych, co skutkuje zdecydowanie wolniejszym przetwarzaniem.\\
+\\
+Pomiar wymienionych wcześniej zdarzeń pozwolił na wyznaczenie m. in. wskaźników braków trafień do pamięci podręcznej oraz do bufora translacji. Wskaźnik braków trafień do TLB jest o rząd wielkości mniejszy w przypadku instancji zapewniającej lokalność przestrzenną. Na liczbę trafień od bufora mają również wpływ inne działające procesy, jednak w przypadku instancji $n=700$ przewidziany został pewien zapas. Nie bez znaczenia jest również fakt, że macierze były najpierw inicjowane liczbami losowymi (macierze A i B), oraz zerami (macierz wynikowa). W związku z tym wiele adresów mogło być już obecnych w buforze, a zatem uzupełnianie nie było wcale wymagane. Bardzo niska wartość wskaźnika ma więc sens, można stwierdzić, że adresy stron wykorzystywanych wielokrotnie były prawie zawsze dostępne w buforze. W obu instancjach nie zapewniających lokalności przestrzennej wskaźnik braków trafień miał podobną, wyższą wartość, spowodowaną koniecznością uzupełniania adresów stron zawierających dane z macierzy B.\\
+\\
+Analizując wskaźnik braków trafień do pamięci podręcznej, oraz wartość określającą ile razy dane instancji były pobierane (TODO odnośnik do tabeli) można zauważyć, że dla instancji mającej zapewniać lokalność czasową - $n=1200$ a nawet dla mniejszej instancji $n=700$, dane były pobierane z pamięci operacyjnej więcej niż raz. Jest to prawdopodobnie spowodowane działaniem w systemie innych procesów, co powodowało usuwanie z pamięci podręcznej niektórych rzadziej używanych w czasie obliczeń danych. Z kolei w przypadku instancji $n=1400$ łatwo dostrzec brak lokalności czasowej. Wskaźnik braków trafień jest o rząd wielkości wyższy niż w przypadku $n=1200$ a dane instancji były pobierane ponad 904 razy. Wzór odnosi się jednak do wielkości wszystkich macierzy, a sposób przeglądania macierzy A oraz B zapewnia lokalność dostępu, dlatego też można stwierdzić, że dane macierzy B były wielokrotnie zastępowane i ponownie sprowadzane do pamięci podręcznej.\\
+\\
+Wartość przyspieszenia przetwarzania równoległego jest z kolei najwyższa dla instancji bez lokalności czasowej oraz przestrzennej ($n=1400$). Jest to jednak spowodowane tym, że metoda sekwencyjna IKJ, służąca jako odniesienie, charakteryzowała się znacząco niższą efektywnością przetwarzania dla tej instancji. Jest to spowodowane również częściowym brakiem lokalności dostępu do danych metody IKJ w przypadku tej instancji, co pokazują wyniki dodatkowego pomiaru zdarzeń w CodeXL dla metody sekwencyjnej (TODO odnośnik tabela).\\
+\\
+Miara IPC, określająca średnią liczbę instrukcji wykonywanych w cyklu zegarowym procesora, zgodnie z oczekiwaniami wskazuje na trend zgodny z prędkością przetwarzania.
 
 
+\subsection{Metoda 6 pętlowa}
 
-
+Wielkości wskaźników dotyczących lokalności czasowej dostępu do danych (TODO odnośnik do tabeli) pokazują, że wielkość macierzy nie większego znaczenia, ważny jest natomiast rozmiar bloku przetwarzanego w danym etapie. W przypadku instancji $n=1400$ nieco korzystniejsze dla efektywności przetwarzania wartości zaobserwowano dla instancji $r=350$. Nie jest to zaskakujący rezultat, ponieważ instancja $r=175$, mimo że może być mniej wrażliwa na czynniki zewnętrzne (zajmowanie części zasobów przez inne procesy) ponieważ posiada większy zapas, to podział pracy na 8 etapów powoduje, że dane bloki danych wykorzystywane ponownie w kolejnych etapach są sprowadzane 2 razy więcej razy. W przypadku instancji $n=2800$, $r=350$ wartość wskaźnika braków trafień do pamięci podręcznej zgodnie z oczekiwaniami jest zbliżoną do tej, która została uzyskana dla instancji $n=1400, r=350$. Zwiększyła się krotność pobierania danych instancji do pamięci podręcznej, ponieważ liczba etapów  przetwarzania wynosi 8. W przypadku instancji $n=2800, r=700$ lokalność czasowa dostępu do danych w trakcie poszczególnych etapów przetwarzania również została zachowana.\\
+\\
+Znaczące różnice zaobserwowano natomiast w kwestii lokalności przestrzennej dostępu do danych. Zgodnie z oczekiwaniami, najlepszy wynik otrzymano dla instancji $n=1400, r=175$. Przy $r=350$ wskaźnik braków trafień do TLB miał wartość większą o jeden rząd wielkości. Pełna lokalność przestrzenna nie została zachowana, jednak wartość wskaźnika rzędu $10^{-3}$ nie powoduje jeszcze znaczącego spadku prędkości przetwarzania. Dla instancji $n=2800$ wskaźnik ten ma wartość ok. 2 razy większą niż dla $n=1400$. Jest to ponownie spowodowane podziałem pracy na 8 etapów (a nie 4), więc liczba koniecznych uzupełnień brakujących adresów wzrasta proporcjonalnie.
+Ostatnia instancja $n=2800, r=700$ charakteryzuje się, zgodnie z przewidywaniami, całkowitym brakiem lokalności przestrzennej. Wartość wskaźnika braków trafień do TLB wynosi około 25\%, co oznacza, że bufor translacji zawierał jedynie pary adresów potrzebne przy odczycie oraz modyfikacji aktualnie wykorzystywanych wartości w macierzy wynikowej, oraz przy odczycie danych z macierzy A. Przy próbie dostępu do danych z fragmentu macierzy B (zawsze kolejne komórki w ramach kolumny), zawsze następował brak trafienia do bufora translacji adresów.\\
+\\
+Powyższe fakty mają odzwierciedlenie w prędkości przetwarzania. Najgorszą wartość uzyskano dla instancji $n=2800, r=700$, natomiast pozostałe instancje cechowały się zbliżoną prędkością przetwarzania. Wartość wskaźnika IPC ponownie znajduje odzwierciedlenie w prędkości przetwarzania. W przypadku instancji analizowanych w tym punkcie algorytm sekwencyjny IKJ cechował się niemal stałą prędkością przetwarzania, a zatem można zaobserwować zgodne z oczekiwaniami przyspieszenie przetwarzania równoległego dla instancji cechujących się przynajmniej częściową lokalnością. W przypadku instancji $n=2800, r=700$ przetwarzanie równoległe odbywało się ponad 2 razy wolniej, niż w metodzie sekwencyjnej IKJ.\\
+\\
+Na podstawie analizy wyników obu metod można zatem wyciągnąć wniosek, że problem z lokalnym czasowo dostępem do danych powoduje spadek efektywności przetwarzania, jednak znacznie większe znaczenie ma brak lokalności przestrzennej.
 
 \end{document}
