--- a/Report/SprawozdaniePR.tex
+++ b/Report/SprawozdaniePR.tex
@@ -64,6 +64,7 @@ Mnożenie macierzy - porównanie efektywności metod –
 
 
 \subsection{Kod}
+\begin{listing}[H]
 \begin{minted}
 [
 	frame=lines,
@@ -81,11 +82,12 @@ void multiply_matrices_IJK(){
 			for (int k = 0; k < SIZE; k++)
 				matrix_r[i][j] += matrix_a[i][k] * matrix_b[k][j];
 }
-
-
 \end{minted}
+\caption{Kod metody 3 pętlowej, kolejność pętli IJK, podział pracy przed pierwszą pętlą}
+\label{lst:ijk}
+\end{listing}
 
-
+\begin{listing}[H]
 \begin{minted}
 [
 	frame=lines,
@@ -110,6 +112,10 @@ void multiply_matrices_IJK_IJK(){
 }
 
 \end{minted}
+\caption{Kod metody 6 pętlowej, kolejność pętli IJK-IJK, podział pracy przed pierwszą pętlą}
+\label{lst:ijkiijjkk}
+\end{listing}
+
 \subsection{Wyścig}
 
 \subsection{Analiza podziału pracy na wątki}
@@ -157,7 +163,7 @@ Na prędkość przetwarzania, oprócz wydajności jednostek wykonujących operac
 \\
 W trakcie analizy lokalności czasowej dostępu do danych metod wykorzystywanych w zadaniu przyjęto rozmiar pamięci podręcznej równy 6MB. Jest on równy pojemności współdzielonej pamięci L3. Pamięć L2 nie została wliczona, ponieważ niektóre dane mogą znajdować się zarówno w niej, jak i w pamięci trzeciego poziomu. Z kolei pojemność pamięci L1 jest tak mała, że nie miałaby znaczącego wpływu przy obliczaniu rozmiarów instancji. Ponadto należy pamiętać, że w systemie działają także inne procesy, w tym narzędzie do analizy wydajności AMD CodeXL, dlatego należy uwzględnić pewien zapas przy wyznaczaniu rozmiarów instancji.\\
 \\
-W przypadku kodu (TODO odnośnik do IJK) w trakcie przetwarzania dane z macierzy B są wykorzystywane N razy. Konieczne jest zatem zmieszczenie całej macierzy B (o rozmiarze $n^2$) w pamięci podręcznej. Macierz ta może być współdzielona przez procesory.
+W przypadku metody 3 pętlowej (Listing \ref{lst:ijk}) w trakcie przetwarzania dane z macierzy B są wykorzystywane N razy. Konieczne jest zatem zmieszczenie całej macierzy B (o rozmiarze $n^2$) w pamięci podręcznej. Macierz ta może być współdzielona przez procesory.
 Podział pracy przed pierwszą pętlą powoduje, że każdy procesor, w trakcie jednego przebiegu tej pętli, wielokrotnie wykorzystuje pojedynczy wiersz macierzy A, później nie odwołuje się ponownie do tych danych. Oznacza to, że w pamięci podręcznej muszą zmieścić się także 4 wiersze (każdy o rozmiarze $n$) macierzy A.
 Konieczne jest również zmieszczenie 4 słów macierzy wynikowej (po jednym dla każdego procesora), jednak należy uwzględnić, że najmniejszą jednostką danych sprowadzanych do pamięci podręcznej jest linia (64B czyli 16 zmiennych typu float).\\
 \\
@@ -169,7 +175,7 @@ Ostatecznie rozmiar instancji, dla której będzie zachowana lokalność czasowa
 Uwzględniając pewien zapas daje to instancję o rozmiarze $n=1200$.\\
 \\
 
-W wersji 6 pętlowej algorytmu mnożenia macierzy (TODO odnośnik do listingu IJK IJK) mamy do czynienia z podzieleniem całego zadania na etapy.Dzięki temu w danym czasie wielokrotnie korzystamy z mniejszej ilości danych (z każdej macierzy wykorzystujemy blok o wielkości $r \cdot r$ elementów). Umożliwia to zachowanie częściowej lokalności czasowej dostępu do danych (poszczególne bloki mogą być pobierane do pamięci podręcznej $n / r$ razy) dla większych instancji, dla których w przypadku poprzedniej metody konieczne byłoby pobieranie danych aż $n$ razy. Wartość $r$ musi być tak dobrana, aby iloraz $n/r$ był liczbą całkowitą. Ponieważ podział pracy następuje przed pierwszą pętlą, iloraz ten będzie również liczbą zadań do podziału między rdzeniami. Powinien być zatem liczbą podzielną przez 4 (liczba wykorzystywanych procesorów fizycznych) w celu zapewnienia zrównoważenia pracy systemu.\\
+W wersji 6 pętlowej algorytmu mnożenia macierzy (Listing \ref{lst:ijkiijjkk}) mamy do czynienia z podzieleniem całego zadania na etapy.Dzięki temu w danym czasie wielokrotnie korzystamy z mniejszej ilości danych (z każdej macierzy wykorzystujemy blok o wielkości $r \cdot r$ elementów). Umożliwia to zachowanie częściowej lokalności czasowej dostępu do danych (poszczególne bloki mogą być pobierane do pamięci podręcznej $n / r$ razy) dla większych instancji, dla których w przypadku poprzedniej metody konieczne byłoby pobieranie danych aż $n$ razy. Wartość $r$ musi być tak dobrana, aby iloraz $n/r$ był liczbą całkowitą. Ponieważ podział pracy następuje przed pierwszą pętlą, iloraz ten będzie również liczbą zadań do podziału między rdzeniami. Powinien być zatem liczbą podzielną przez 4 (liczba wykorzystywanych procesorów fizycznych) w celu zapewnienia zrównoważenia pracy systemu.\\
 \\
 Wielkość instancji zapewniającej częściową lokalność czasową można teoretycznie policzyć korzystając ze wzoru (TODO odnośnik do wzoru powyżej), zamiast $n$ podstawiając $r$. Wartość ta będzie poprawna przy założeniu, że rdzenie pracują z równą szybkością i w danych czasie mogą współdzielić ten sam wykorzystywany blok macierzy b. Jest to jednak założenie dość ryzykowne, więc do obliczenia przyjęto inny wzór: 
 \begin{equation}
