fix spacing in formula

--- a/Report/SprawozdaniePR.tex
+++ b/Report/SprawozdaniePR.tex
@@ -340,9 +340,9 @@ Miara kosztu synchronizacji
 \frac{CCP - CWP}{CCP} = \frac{LUPF \cdot Tobl - LCP \cdot Tclk}{LUPF \cdot Tobl}
 \end{equation}
 
-Przyspieszenie przetwarzania równoległego
+Przyspieszenie przetwarzania równoległego  %TODO - co z polskimi literami?
 \begin{equation}
-Sp(równoległe A) = \frac{Tolb(obliczenia \; sekwencyjne IKJ)}{Tobl(obliczenia równoległe A)}
+Sp(równoległe\; A) = \frac{Tolb(obliczenia\; sekwencyjne\; IKJ)}{Tobl(obliczenia\; równoległe\; A)}
 \end{equation}
 
 
