--- a/Report/SprawozdaniePR.tex
+++ b/Report/SprawozdaniePR.tex
@@ -274,7 +274,39 @@ Pierwsza może charakteryzować się zbliżoną lokalnością czasową do instan
 
 \subsection{Instancje}
 
-TODO tabelka n,r, wybrane instancje, oba kody
+\begin{table}[H]
+\centering
+\def\arraystretch{1.5}
+\begin{tabular}{|c|}
+\hline
+metoda 3 pętlowa \\
+\hline
+n \\
+\hline
+700 \\
+\hline
+1200 \\
+\hline
+1400 \\
+\hline
+\end{tabular}
+\hspace{70pt}
+\begin{tabular}{|c|c|}  %druga tabela
+\hline
+\multicolumn{2}{|c|}{metoda 6 pętlowa} \\
+\hline
+n & r\\
+\hline
+1400 & 350 \\
+\hline
+1400 & 175 \\
+\hline
+2800 & 700 \\
+\hline
+2800 & 350 \\
+\hline
+\end{tabular}
+\end{table}
 
 \subsection{Mierzone parametry}
 
