fix spelling error

--- a/Report/SprawozdaniePR.tex
+++ b/Report/SprawozdaniePR.tex
@@ -374,7 +374,7 @@ Miara kosztu synchronizacji
 
 Przyspieszenie przetwarzania równoległego  %TODO - co z polskimi literami?
 \begin{equation}
-Sp(równoległe\; A) = \frac{Tolb(obliczenia\; sekwencyjne\; IKJ)}{Tobl(obliczenia\; równoległe\; A)}
+Sp(równoległe\; A) = \frac{Tobl(obliczenia\; sekwencyjne\; IKJ)}{Tobl(obliczenia\; równoległe\; A)}
 \end{equation}
 
 
